--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="https://alshahriardotme.github.io/Portfolio-/" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename"><a href="https://alshahriardotme.github.io/Portfolio-/"> <img src="./assets/img/logo-darks.png" alt=""></a></h1>
+        <h1 class="sitename"> <img src="./assets/img/logo-darks.png" alt=""></h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
